# command_central

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
src/: main.rs  tests.rs
src/agent/: chat.rs  gate.rs  llm.rs  mod.rs  tools.rs
src/cli/: repl.rs  tui.rs
src/core/: config.rs  db.rs  detector.rs  executor.rs  mcp.rs  mod.rs  monitor.rs  scheduler.rs  task.rs
src/discord/: bot.rs
src/utils/: shell.rs
