
[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client","gateway","model","rustls_backend"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
serde = { version = "1", features=["derive"] }
dotenvy = "0.15"
